# protobook

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: deserialize_fb2.rs
proto/: book.proto
src/: fb2.rs  lib.rs
tests/: deserialize_fb2.rs
